# Context-Bridge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .release-trigger  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  RELEASE_NOTES_v0.1.0.md  SECURITY.md  alembic.ini  docker-compose.observability.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  release-body.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_parent_documents.py  0003_cognitive_layer.py  0004_collective_learning.py  0005_entity_aliases.py  0006_lessons.py
deploy/grafana/dashboards/: context-bridge.json
deploy/helm/context-bridge/: .helmignore  Chart.yaml  values.yaml
deploy/prometheus/: prometheus.yml
examples/: quickstart.py
src/context_bridge/: __init__.py  __main__.py  benchmark.py  config.py  tokenizer.py
tests/: conftest.py
tests/integration/: test_api.py  test_api_extra.py  test_belief_distill_explain.py  test_belief_distill_explain_api.py  test_benchmark.py  test_cognitive.py  test_cognitive_api.py  test_collective.py  test_collective_api.py  test_data_management.py  test_insights.py  test_insights_api.py  test_lessons.py  test_lessons_api.py  test_maintenance.py  test_memory_flow.py  test_metrics.py  test_ontology_quality.py  test_ontology_quality_api.py  test_ops.py  test_ops_api.py  test_rbac.py  test_reranker_smoke.py  test_salient_temporal.py  test_sdk_extended.py  test_security.py  test_streaming.py
tests/unit/: test_budget.py  test_chunking.py  test_cognitive_units.py  test_events.py  test_mmr.py  test_policy.py  test_providers.py  test_resolver.py  test_rrf.py  test_salience.py  test_semantic_chunking.py  test_summarizer.py  test_tokenizer.py  test_tracing.py  test_working_memory.py
(+70 files in other folders)
